2nd mvc with jsp commit

--- a/spring-mvc-with-jsp/src/main/resources/application.properties
+++ b/spring-mvc-with-jsp/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=HR
 spring.datasource.password=HR
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 
+logging.level.org.springframework.web=trace
