--- a/spring_rest_with_caching/src/main/resources/application.yml
+++ b/spring_rest_with_caching/src/main/resources/application.yml
@@ -7,3 +7,10 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+      
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - "*"
